# dotman

./: .gitignore  README.md  pyproject.toml  requirements.txt
dotman/: __init__.py  __main__.py  cli.py  context.py  exceptions.py  main.py  models.py  util.py
dotman_tests/: test_init.py  test_utils.py
dotman_tests/integration/: test_migrate_to_dotman.py
dotman_tests/system/: test_add_link.py  test_from_path.py  test_init.py  test_link.py  test_restore.py  test_set_link.py  test_status.py
dotman_tests/unit/: test_normalize_path.py
dotmanager/: main.py
dotmanager_tests/system/: test_link.py
scripts/: pipeline.sh
src/dotman/: __init__.py  add.py  cli.py  config.py  context.py  edit.py  examples.py  exceptions.py  init.py  setup.py  status.py  sync.py  util.py
tests/: conftest.py  test_add.py  test_context.py  test_edit.py  test_init.py  test_setup.py  test_setup_examples.py  test_std.py  test_sync.py  test_util.py
