[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotman"
authors = [
	{name = "Joel Ottosson"}
]
# dymanic = ["version"]
version = "0.0.1" # Dynamicly set
description = "Dot file manager"
requires-python = ">= 3.8"

[project.scripts]
dotman = "dotman.cli:cli"
